--- a/css/main.css
+++ b/css/main.css
@@ -364,56 +364,56 @@ footer {
     justify-content: space-between;
     background: url("assets/sh.png") center center/cover no-repeat;
 }
-.main__greeting {
+/* .main__greeting {
     margin-top: 6px;
     font-size: 27px;
     font-weight: 700;
-}
-.main__info {
+} */
+/* .main__info {
     width: 61.585%;
     padding-top: 20px;
     padding-left: 20px;
     background: rgba(255,255,255,0.6);
-}
-.main__panel {
+} */
+/* .main__panel {
     margin-bottom: 14px;
     position: relative;
-}
-.main__status {
+} */
+/* .main__status {
     margin-top: 6px;
     line-height: 16px;
-}
-.main__upcoming {
+} */
+/* .main__upcoming {
     width: 220px;
     height: 100%;
     overflow-y: scroll;
-}
-.main__upcoming-wrapper {
+} */
+/* .main__upcoming-wrapper {
     width: 200px;
     height: 100%;
     overflow: hidden;
-}
-.main__weather {
+} */
+/* .main__weather {
     margin-top: 25px;
-}
+} */
 .menu {
     margin-left: 52px;
 }
-.menu__icon {
+/* .menu__icon {
     display: none;
-}
-.menu__item {
+} */
+/* .menu__item {
     margin-right: 27px;
     font-size: 16px;
     font-weight: 700;
-}
-.menu__list {
+} */
+/* .menu__list {
     display: flex;
     justify-content: flex-start;
     list-style: none;
     padding: 0;
     margin: 0;
-}
+} */
 .modal {
     display: none;
     flex-direction: column;
@@ -428,18 +428,18 @@ footer {
     overflow: auto;
     background: rgba(51, 51, 51, 0.5);
 }
-.modal_open {
+/* .modal_open {
     display: flex;
 }
-.modal_open .modal__content {
+.modal_open /*.modal__content {
     animation: modal 0.2s ease forwards;
-}
-.modal__title {
+} */
+/* .modal__title {
     font-size: 27px;
     font-weight: 700;
     margin-bottom: 6px;
-}
-.modal__value {
+} */
+/* .modal__value {
     box-sizing: content-box;
     position: absolute;
     top: 20px;
@@ -449,42 +449,22 @@ footer {
     max-width: 62px;
     height: 40px;
     padding-right: 32px;
-}
-.modal__value_temp {
+} */
+/* .modal__value_temp {
     background: url("assets/panel__icon_temp_on.svg") calc(100% + 10px) 0%/contain no-repeat;
-}
-.modal__value_light {
+} */
+/* .modal__value_light {
     height: 45px;
     padding-right: 45px;
     background: url("assets/panel__icon_light_off.svg") right center/contain no-repeat;
-}
-.modal__status {
-    margin-bottom: 20px;
-}
-.modal__adjust {
-    margin-top: 25px;
-}
-.modal__button {
-    width: 48.5%;
-}
-.modal__content {
-    max-width: 640px;
-    width: 100%;
-}
-.modal__body {
-    position: relative;
-    flex-shrink: 0;
-    padding: 25px;
-    margin-bottom: 15px;
-    border-radius: 20px;
-    background: #fff;
-}
-/* .modal__controls {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 } */
+/* .modal__status {
+    margin-bottom: 20px;
+} */
+/* .modal__adjust {
+    margin-top: 25px;
+} */
+
 @keyframes modal {
     from {
         transform: scale(0.2);
@@ -506,144 +486,10 @@ html {
     padding: 0;
     width: 1366px;
 }
-/* .page__wrapper {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-} */
-/* .page__wrapper-content {
-    flex: 1 0 auto;
-} */
-/* .paginator {
-    height: 16px;
-    width: 47px;
-    display: flex;
-    justify-content: space-between;
-}
-.paginator div {
-    width: 16px;
-} */
-/* .paginator_hide {
-    display: none;
-} */
-/* .paginator__arrow {
-    opacity: 1;
-    cursor: pointer;
-}
-.paginator__arrow:hover {
-    opacity: 0.5;
-}
-.paginator__arrow:active {
-    opacity: 0.3;
-} */
-/* .paginator__arrow_disabled {
-    opacity: 0.3;
-} */
-/* .panel {
-    padding: 14px;
-    min-height: 100px;
-    width: 200px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-shrink: 0;
-    background: #f7f7f7;
-    cursor: pointer;
-    transition: opacity 0.3s ease-out;
-}
-.panel:hover {
-    background: #fff;
-    box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
-}
-.panel:active {
-    box-shadow: none;
-} */
-/* .panel_device {
-    height: 120px;
-} */
-/* .panel_first {
-    margin-top: 20px;
-} */
-/* .panel_last {
-    margin-bottom: 20px;
-} */
-/* .panel__sub {
-    font-size: 12px;
-    color: #858585;
-} */
-/* .panel__title {
-    font-weight: 700;
-    margin-bottom: 4px;
-} */
-/* .scenarios {
-    max-height: 331px;
-    background: #fff;
-    display: flex;
-    justify-content: flex-start;
-    overflow-x: hidden;
-} */
-/* .scenarios__page {
-    display: grid;
-    grid-template-columns: repeat(3, 200px);
-    grid-template-rows: repeat(3, 100px);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
-    justify-content: space-between;
-    margin-right: 15px;
-} */
-/* .scenarios__paginator {
-    position: absolute;
-    top: 0;
-    right: 40px;
-} */
-/* .scenarios_hide {
-    display: none;
-} */
-/* .weather {
-    display: flex;
-} */
-/* .weather__item {
-    margin-right: 18px;
-} */
-/* .weather__item-title {
-    color: #858585;
-    margin-bottom: 4px;
-} */
-/* .weather__item-temp {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.16;
-    font-family: "PT Sans Narrow", "Helvetica Neue", Helvetica, Arial, sans-serif;
-} */
-/* .weather__item_outside {
-    padding-right: 31px;
-} */
-/* .weather__item_cloud-drizzle {
-    background: url("assets/cloud-drizzle.png") 100% 70%/26px no-repeat;
-} */
+
 .stats {
     opacity: 0;
 }
-/* .panel__icon {
-    width: 24px;
-    height: 24px;
-} */
-/* .panel__icon_temp_off {
-    background: url("assets/panel__icon_temp_off.svg") center center/contain no-repeat;
-}
-.panel__icon_temp_on {
-    background: url("assets/panel__icon_temp_on.svg") center center/contain no-repeat;
-}
-.panel__icon_light_off {
-    background: url("assets/panel__icon_light_off.svg") center center/contain no-repeat;
-}
-.panel__icon_light_on {
-    background: url("assets/panel__icon_light_on.svg") center center/contain no-repeat;
-}
-.panel__icon_clock {
-    background: url("assets/panel__icon_clock.svg") center center/contain no-repeat;
-} */
 
 .card-heading {
     display: flex;
