--- a/css/default.css
+++ b/css/default.css
@@ -385,7 +385,7 @@ h6, .h6 {
   font-size: 1.25rem;
   font-weight: 300;
 }
-
+/* 
 .display-1 {
   font-size: 6rem;
   font-weight: 300;
@@ -408,7 +408,7 @@ h6, .h6 {
   font-size: 3.5rem;
   font-weight: 300;
   line-height: 1.2;
-}
+} */
 
 hr {
   margin-top: 1rem;
