--- a/css/default.css
+++ b/css/default.css
@@ -5322,7 +5322,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   background-color: #1b1e21;
   border-color: #1b1e21;
 } */
-/*  
+  
 .close {
   float: right;
   font-size: 1.5rem;
@@ -5351,8 +5351,8 @@ button.close {
 
 a.close.disabled {
   pointer-events: none;
-} */
-/* 
+} 
+
 .toast {
   max-width: 350px;
   overflow: hidden;
@@ -5395,7 +5395,7 @@ a.close.disabled {
 
 .toast-body {
   padding: 0.75rem;
-} */
+} 
 
 .carousel {
   position: relative;
