--- a/css/default.css
+++ b/css/default.css
@@ -4512,7 +4512,7 @@ header {
 .accordion > .card .card-header {
   margin-bottom: -1px;
 }
-/* 
+
 .breadcrumb {
   display: flex;
   flex-wrap: wrap;
@@ -4544,7 +4544,7 @@ header {
 
 .breadcrumb-item.active {
   color: #6c757d;
-} */
+}
 
 .pagination {
   display: flex;
@@ -4552,7 +4552,7 @@ header {
   list-style: none;
   border-radius: 0.25rem;
 }
-/* 
+
 .page-link {
   position: relative;
   display: block;
@@ -4576,8 +4576,8 @@ header {
   z-index: 2;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-} */
-/* 
+}
+
 .page-item:first-child .page-link {
   margin-left: 0;
   border-top-left-radius: 0.25rem;
@@ -4602,8 +4602,8 @@ header {
   cursor: auto;
   background-color: #fff;
   border-color: #dee2e6;
-} */
-/* 
+}
+
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
@@ -4634,7 +4634,7 @@ header {
 .pagination-sm .page-item:last-child .page-link {
   border-top-right-radius: 0.2rem;
   border-bottom-right-radius: 0.2rem;
-} */
+} 
 
 .badge {
   display: inline-block;
@@ -4794,7 +4794,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 } 
 
-/* .jumbotron {
+.jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: #e9ecef;
@@ -4811,7 +4811,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   padding-right: 0;
   padding-left: 0;
   border-radius: 0;
-} */
+} 
 
 .media {
   display: flex;
