--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,8 @@ html {
 
 .card-data_graph-img {
     width: 100%;
-    margin-bottom: -4px
+    margin-bottom: -4px;
+    background: url('../img/chart.png');
 }
 
 .card-data_climat {
