--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ html {
 .card-data_graph-img {
     width: 100%;
     margin-bottom: -4px;
-    background: url('../img/chart.png');
+    /* background: url('../img/chart.png'); */
 }
 
 .card-data_climat {
