--- a/css/default.css
+++ b/css/default.css
@@ -114,10 +114,10 @@ dd {
   margin-bottom: .5rem;
   margin-left: 0;
 }
-
+/* 
 blockquote {
   margin: 0 0 1rem;
-}
+} */
 
 b,
 strong {
@@ -310,9 +310,9 @@ legend {
   white-space: normal;
 }
 
-progress {
+/* progress {
   vertical-align: baseline;
-}
+} */
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
@@ -404,7 +404,7 @@ mark,
   padding: 0.2em;
   background-color: #fcf8e3;
 }
-
+/* 
 .list-unstyled {
   padding-left: 0;
   list-style: none;
@@ -421,7 +421,7 @@ mark,
 
 .list-inline-item:not(:last-child) {
   margin-right: 0.5rem;
-}
+} */
 
 .purchase-list__item + .purchase-list__item {
   margin-top: 10px;
@@ -431,7 +431,7 @@ mark,
   font-size: 90%;
   text-transform: uppercase;
 }
-
+/* 
 .blockquote {
   margin-bottom: 1rem;
   font-size: 1.25rem;
@@ -445,7 +445,7 @@ mark,
 
 .blockquote-footer::before {
   content: "\2014\00A0";
-}
+} */
 
 .img-fluid {
   max-width: 100%;
@@ -604,7 +604,7 @@ pre code {
     transition: none;
   }
 }
-
+/* 
 .dropdown-toggle-split {
   padding-right: 0.5625rem;
   padding-left: 0.5625rem;
@@ -618,7 +618,7 @@ pre code {
 
 .dropleft .dropdown-toggle-split::before {
   margin-right: 0;
-}
+} */
 
 .tab-content > .tab-pane {
   display: none;
@@ -767,7 +767,7 @@ header {
     width: 100%;
   }
 }
-
+/* 
 
 .page-link {
   position: relative;
@@ -818,26 +818,7 @@ header {
   cursor: auto;
   background-color: #fff;
   border-color: #dee2e6;
-}
-/* 
-.jumbotron {
-  padding: 2rem 1rem;
-  margin-bottom: 2rem;
-  background-color: #e9ecef;
-  border-radius: 0.3rem;
-}
-
-@media (min-width: 576px) {
-  .jumbotron {
-    padding: 4rem 2rem;
-  }
-}
-
-.jumbotron-fluid {
-  padding-right: 0;
-  padding-left: 0;
-  border-radius: 0;
-}  */
+} */
 
 .media {
   display: flex;
@@ -877,102 +858,10 @@ button.close {
 a.close.disabled {
   pointer-events: none;
 } 
-/* 
-.toast {
-  max-width: 350px;
-  overflow: hidden;
-  font-size: 0.875rem;
-  background-color: rgba(255, 255, 255, 0.85);
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  opacity: 0;
-  border-radius: 0.25rem;
-}
-
-.toast:not(:last-child) {
-  margin-bottom: 0.75rem;
-}
-
-.toast.showing {
-  opacity: 1;
-}
-
-.toast.show {
-  display: block;
-  opacity: 1;
-}
-
-.toast.hide {
-  display: none;
-}
-
-.toast-header {
-  display: flex;
-  align-items: center;
-  padding: 0.25rem 0.75rem;
-  color: #6c757d;
-  background-color: rgba(255, 255, 255, 0.85);
-  background-clip: padding-box;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-}
-
-.toast-body {
-  padding: 0.75rem;
-}  */
 
 .carousel {
   position: relative;
 }
-/* 
-@keyframes spinner-border {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.spinner-border {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  vertical-align: text-bottom;
-  border: 0.25em solid currentColor;
-  border-right-color: transparent;
-  border-radius: 50%;
-  animation: spinner-border .75s linear infinite;
-}
-
-.spinner-border-sm {
-  width: 1rem;
-  height: 1rem;
-  border-width: 0.2em;
-}
-
-@keyframes spinner-grow {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    opacity: 1;
-  }
-}
-
-.spinner-grow {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  vertical-align: text-bottom;
-  background-color: currentColor;
-  border-radius: 50%;
-  opacity: 0;
-  animation: spinner-grow .75s linear infinite;
-}
-
-.spinner-grow-sm {
-  width: 1rem;
-  height: 1rem;
-} */
 
 .bg-primary {
   background-color: #007bff !important;
@@ -1219,34 +1108,4 @@ button.bg-dark:focus {
   .container {
     min-width: 992px !important;
   }
-  /* .navbar {
-    display: none;
-  }
-  .badge {
-    border: 1px solid #000;
-  }
-  .table {
-    border-collapse: collapse !important;
-  }
-  .table td,
-  .table th {
-    background-color: #fff !important;
-  }
-  .table-bordered th,
-  .table-bordered td {
-    border: 1px solid #dee2e6 !important;
-  }
-  .table-dark {
-    color: inherit;
-  }
-  .table-dark th,
-  .table-dark td,
-  .table-dark thead th,
-  .table-dark tbody + tbody {
-    border-color: #dee2e6;
-  }
-  .table .thead-dark th {
-    color: inherit;
-    border-color: #dee2e6;
-  } */
 }
