--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -27,7 +27,7 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
+} */
 
 *,
 *::before,
@@ -114,10 +114,6 @@ dd {
   margin-bottom: .5rem;
   margin-left: 0;
 }
-/* 
-blockquote {
-  margin: 0 0 1rem;
-} */
 
 b,
 strong {
@@ -127,7 +123,7 @@ strong {
 small {
   font-size: 80%;
 }
-
+/* 
 sub,
 sup {
   position: relative;
@@ -142,7 +138,7 @@ sub {
 
 sup {
   top: -.5em;
-}
+} */
 
 a {
   color: #007bff;
@@ -196,10 +192,10 @@ svg {
   overflow: hidden;
   vertical-align: middle;
 }
-
+/* 
 table {
   border-collapse: collapse;
-}
+} */
 
 caption {
   padding-top: 0.75rem;
@@ -286,7 +282,7 @@ input[type="month"] {
   -webkit-appearance: listbox;
 }
 
-textarea {
+/* textarea {
   overflow: auto;
   resize: vertical;
 }
@@ -308,11 +304,8 @@ legend {
   line-height: inherit;
   color: inherit;
   white-space: normal;
-}
-
-/* progress {
-  vertical-align: baseline;
 } */
+
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
@@ -333,14 +326,14 @@ legend {
   -webkit-appearance: button;
 }
 
-output {
+/* output {
   display: inline-block;
-}
-
+} */
+/* 
 summary {
   display: list-item;
   cursor: pointer;
-}
+} */
 
 template {
   display: none;
@@ -392,35 +385,17 @@ hr {
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-
+/* 
 small,
 .small {
   font-size: 80%;
   font-weight: 400;
-}
-
+} */
+/* 
 mark,
 .mark {
   padding: 0.2em;
   background-color: #fcf8e3;
-}
-/* 
-.list-unstyled {
-  padding-left: 0;
-  list-style: none;
-}
-
-.list-inline {
-  padding-left: 0;
-  list-style: none;
-}
-
-.list-inline-item {
-  display: inline-block;
-}
-
-.list-inline-item:not(:last-child) {
-  margin-right: 0.5rem;
 } */
 
 .purchase-list__item + .purchase-list__item {
@@ -431,21 +406,6 @@ mark,
   font-size: 90%;
   text-transform: uppercase;
 }
-/* 
-.blockquote {
-  margin-bottom: 1rem;
-  font-size: 1.25rem;
-}
-
-.blockquote-footer {
-  display: block;
-  font-size: 80%;
-  color: #6c757d;
-}
-
-.blockquote-footer::before {
-  content: "\2014\00A0";
-} */
 
 .img-fluid {
   max-width: 100%;
@@ -460,7 +420,7 @@ mark,
   max-width: 100%;
   height: auto;
 }
-
+/* 
 .figure {
   display: inline-block;
 }
@@ -473,7 +433,7 @@ mark,
 .figure-caption {
   font-size: 90%;
   color: #6c757d;
-}
+} */
 
 code {
   font-size: 87.5%;
@@ -604,21 +564,6 @@ pre code {
     transition: none;
   }
 }
-/* 
-.dropdown-toggle-split {
-  padding-right: 0.5625rem;
-  padding-left: 0.5625rem;
-}
-
-.dropdown-toggle-split::after,
-.dropup .dropdown-toggle-split::after,
-.dropright .dropdown-toggle-split::after {
-  margin-left: 0;
-}
-
-.dropleft .dropdown-toggle-split::before {
-  margin-right: 0;
-} */
 
 .tab-content > .tab-pane {
   display: none;
@@ -767,58 +712,6 @@ header {
     width: 100%;
   }
 }
-/* 
-
-.page-link {
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -1px;
-  line-height: 1.25;
-  color: #007bff;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
-}
-
-.page-link:hover {
-  z-index: 2;
-  color: #0056b3;
-  text-decoration: none;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
-}
-
-.page-link:focus {
-  z-index: 2;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-
-.page-item:first-child .page-link {
-  margin-left: 0;
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.page-item:last-child .page-link {
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.page-item.active .page-link {
-  z-index: 1;
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.page-item.disabled .page-link {
-  color: #6c757d;
-  pointer-events: none;
-  cursor: auto;
-  background-color: #fff;
-  border-color: #dee2e6;
-} */
 
 .media {
   display: flex;
