--- a/css/main.css
+++ b/css/main.css
@@ -884,3 +884,11 @@ html {
         margin-top: 10px
     }
 }
+
+.card{
+    border-radius: 23px;
+}
+
+.card:has(.card_size_s){
+    border-radius: 22px;
+}
