--- a/css/default.css
+++ b/css/default.css
@@ -364,7 +364,7 @@ pre code {
   max-height: 340px;
   overflow-y: scroll;
 }
-
+/* 
 .container {
   width: 100%;
   padding-right: 15px;
@@ -383,8 +383,8 @@ pre code {
   .container {
     max-width: 720px;
   }
-}
-
+} */
+/* 
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
@@ -403,7 +403,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-}
+} */
 
 .row {
   display: flex;
@@ -441,7 +441,7 @@ pre code {
   display: none;
 }
 
-.collapsing {
+/* .collapsing {
   position: relative;
   height: 0;
   overflow: hidden;
@@ -452,8 +452,8 @@ pre code {
   .collapsing {
     transition: none;
   }
-}
-
+} */
+/* 
 .tab-content > .tab-pane {
   display: none;
 }
@@ -461,7 +461,7 @@ pre code {
 .tab-content > .active {
   display: block;
 }
-
+ */
 
 .card {
   position: relative;
@@ -601,7 +601,7 @@ header {
     width: 100%;
   }
 }
-
+/* 
 .media {
   display: flex;
   align-items: flex-start;
@@ -609,8 +609,8 @@ header {
 
 .media-body {
   flex: 1;
-}
-
+} */
+/* 
 .close {
   float: right;
   font-size: 1.5rem;
@@ -628,14 +628,14 @@ header {
 
 .close:not(:disabled):not(.disabled):hover, .close:not(:disabled):not(.disabled):focus {
   opacity: .75;
-}
-
+} */
+/* 
 button.close {
   padding: 0;
   background-color: transparent;
   border: 0;
   appearance: none;
-}
+} */
 
 a.close.disabled {
   pointer-events: none;
@@ -711,7 +711,7 @@ a.close.disabled {
   body {
     min-width: 992px !important;
   }
-  .container {
+  /* .container {
     min-width: 992px !important;
-  }
+  } */
 }
