--- a/css/default.css
+++ b/css/default.css
@@ -25,16 +25,6 @@ body {
   text-align: left;
   background-color: #fff;
 }
-/* 
-[tabindex="-1"]:focus {
-  outline: 0 !important;
-} */
-/* 
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-} */
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -45,7 +35,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-
+/* 
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
@@ -53,12 +43,6 @@ abbr[data-original-title] {
   cursor: help;
   border-bottom: 0;
   text-decoration-skip-ink: none;
-}
-
-/* address {
-  margin-bottom: 1rem;
-  font-style: normal;
-  line-height: inherit;
 } */
 
 ol,
@@ -74,24 +58,6 @@ ol ul,
 ul ol {
   margin-bottom: 0;
 }
-/* 
-dt {
-  font-weight: 700;
-} */
-/* 
-dd {
-  margin-bottom: .5rem;
-  margin-left: 0;
-} */
-/* 
-b,
-strong {
-  font-weight: bolder;
-} */
-/* 
-small {
-  font-size: 80%;
-} */
 
 a {
   color: #007bff;
@@ -118,14 +84,6 @@ a:not([href]):not([tabindex]):focus {
   outline: 0;
 }
 
-/* pre,
-code,
-kbd,
-samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  font-size: 1em;
-} */
-
 img {
   vertical-align: middle;
   border-style: none;
@@ -139,11 +97,6 @@ svg {
 th {
   text-align: inherit;
 }
-/* 
-label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-} */
 
 button {
   border-radius: 0;
@@ -173,10 +126,10 @@ button,
 select {
   text-transform: none;
 }
-
+/* 
 select {
   word-wrap: normal;
-}
+} */
 
 button,
 [type="button"],
@@ -199,25 +152,25 @@ button::-moz-focus-inner,
   padding: 0;
   border-style: none;
 }
-
+/* 
 input[type="radio"],
 input[type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
-}
-
+} */
+/* 
 input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
   -webkit-appearance: listbox;
-}
+} */
 
-[type="number"]::-webkit-inner-spin-button,
+/* [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
-}
-
+} */
+/* 
 [type="search"] {
   outline-offset: -2px;
   -webkit-appearance: none;
@@ -225,7 +178,7 @@ input[type="month"] {
 
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
-}
+} */
 
 ::-webkit-file-upload-button {
   font: inherit;
@@ -242,10 +195,6 @@ h1, h2, h3, h4, h5, h6,
   font-weight: 500;
   line-height: 1.2;
 }
-/* 
-h1, .h1 {
-  font-size: 2.5rem;
-} */
 
 h2, .h2 {
   font-size: 2rem;
@@ -258,51 +207,10 @@ h3, .h3 {
 h4, .h4 {
   font-size: 1.5rem;
 }
-/* 
-h5, .h5 {
-  font-size: 1.25rem;
-} */
-
-/* h6, .h6 {
-  font-size: 1rem;
-} */
-/* 
-.lead {
-  font-size: 1.25rem;
-  font-weight: 300;
-} */
-/* 
-hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-} */
 
 .purchase-list__item + .purchase-list__item {
   margin-top: 10px;
 }
-/* 
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-} */
-/* 
-.img-thumbnail {
-  padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
-  border-radius: 0.25rem;
-  max-width: 100%;
-  height: auto;
-} */
-/* 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-} */
 
 .card {
   position: relative;
@@ -313,11 +221,6 @@ hr {
   background-clip: border-box;
   border-radius: 0.25rem;
 }
-/* 
-.card > hr {
-  margin-right: 0;
-  margin-left: 0;
-} */
 
 .card > .list-group:first-child .list-group-item:first-child {
   border-top-left-radius: 0.25rem;
@@ -328,33 +231,32 @@ hr {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
 }
-
+/* 
 .card-body {
   flex: 1 1 auto;
   padding: 1.25rem;
-}
+} */
 
 .card-title {
   margin-bottom: 0;
 }
-
+/* 
 .card-subtitle {
   margin-top: -0.375rem;
   margin-bottom: 0;
-}
-
+} */
+/* 
 .card-text:last-child {
   margin-bottom: 0;
-}
-
+} */
+/* 
 .card-link:hover {
   text-decoration: none;
 }
 
 .card-link + .card-link {
   margin-left: 1.25rem;
-}
-
+} */
 
 header {
   height: 93px;
@@ -362,7 +264,7 @@ header {
   padding: 0 40px;
   border-bottom: 1px solid #f0f0f0
 }
-
+/* 
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
@@ -376,9 +278,9 @@ header {
 
 .card-header + .list-group .list-group-item:first-child {
   border-top: 0;
-}
+} */
 
-.card-footer {
+/* .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
@@ -386,9 +288,9 @@ header {
 
 .card-footer:last-child {
   border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
-}
+} */
 
-.card-header-tabs {
+/* .card-header-tabs {
   margin-right: -0.625rem;
   margin-bottom: -0.75rem;
   margin-left: -0.625rem;
@@ -398,9 +300,9 @@ header {
 .card-header-pills {
   margin-right: -0.625rem;
   margin-left: -0.625rem;
-}
+} */
 
-.card-img-overlay {
+/* .card-img-overlay {
   position: absolute;
   top: 0;
   right: 0;
@@ -424,9 +326,9 @@ header {
   width: 100%;
   border-bottom-right-radius: calc(0.25rem - 1px);
   border-bottom-left-radius: calc(0.25rem - 1px);
-}
+} */
 
-.card-columns .card {
+/* .card-columns .card {
   margin-bottom: 0.75rem;
 }
 
@@ -441,7 +343,7 @@ header {
     display: inline-block;
     width: 100%;
   }
-}
+} */
 
 a.close.disabled {
   pointer-events: none;
@@ -483,20 +385,7 @@ a.close.disabled {
   a:not(.btn) {
     text-decoration: underline;
   }
-  /* abbr[title]::after {
-    content: " (" attr(title) ")";
-  } */
-  /* pre {
-    white-space: pre-wrap !important;
-  }
-  pre,
-  blockquote {
-    border: 1px solid #adb5bd;
-    page-break-inside: avoid;
-  } */
-  /* thead {
-    display: table-header-group;
-  } */
+
   tr,
   img {
     page-break-inside: avoid;
