--- a/css/default.css
+++ b/css/default.css
@@ -11,9 +11,9 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+/* article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
-}
+} */
 
 body {
   margin: 0;
@@ -36,28 +36,19 @@ p {
   margin-bottom: 1rem;
 }
 /* 
-abbr[title],
-abbr[data-original-title] {
-  text-decoration: underline;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
-  text-decoration-skip-ink: none;
-} */
-
 ol,
 ul,
 dl {
   margin-top: 0;
   margin-bottom: 1rem;
-}
-
+} */
+/* 
 ol ol,
 ul ul,
 ol ul,
 ul ol {
   margin-bottom: 0;
-}
+} */
 
 a {
   color: #007bff;
@@ -93,10 +84,10 @@ svg {
   overflow: hidden;
   vertical-align: middle;
 }
-
+/* 
 th {
   text-align: inherit;
-}
+} */
 
 button {
   border-radius: 0;
@@ -126,10 +117,6 @@ button,
 select {
   text-transform: none;
 }
-/* 
-select {
-  word-wrap: normal;
-} */
 
 button,
 [type="button"],
@@ -152,33 +139,6 @@ button::-moz-focus-inner,
   padding: 0;
   border-style: none;
 }
-/* 
-input[type="radio"],
-input[type="checkbox"] {
-  box-sizing: border-box;
-  padding: 0;
-} */
-/* 
-input[type="date"],
-input[type="time"],
-input[type="datetime-local"],
-input[type="month"] {
-  -webkit-appearance: listbox;
-} */
-
-/* [type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-} */
-/* 
-[type="search"] {
-  outline-offset: -2px;
-  -webkit-appearance: none;
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-} */
 
 ::-webkit-file-upload-button {
   font: inherit;
@@ -231,32 +191,10 @@ h4, .h4 {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
 }
-/* 
-.card-body {
-  flex: 1 1 auto;
-  padding: 1.25rem;
-} */
 
 .card-title {
   margin-bottom: 0;
 }
-/* 
-.card-subtitle {
-  margin-top: -0.375rem;
-  margin-bottom: 0;
-} */
-/* 
-.card-text:last-child {
-  margin-bottom: 0;
-} */
-/* 
-.card-link:hover {
-  text-decoration: none;
-}
-
-.card-link + .card-link {
-  margin-left: 1.25rem;
-} */
 
 header {
   height: 93px;
@@ -265,89 +203,9 @@ header {
   border-bottom: 1px solid #f0f0f0
 }
 /* 
-.card-header {
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-header:first-child {
-  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-}
-
-.card-header + .list-group .list-group-item:first-child {
-  border-top: 0;
-} */
-
-/* .card-footer {
-  padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-footer:last-child {
-  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
-} */
-
-/* .card-header-tabs {
-  margin-right: -0.625rem;
-  margin-bottom: -0.75rem;
-  margin-left: -0.625rem;
-  border-bottom: 0;
-}
-
-.card-header-pills {
-  margin-right: -0.625rem;
-  margin-left: -0.625rem;
-} */
-
-/* .card-img-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1.25rem;
-}
-
-.card-img {
-  width: 100%;
-  border-radius: calc(0.25rem - 1px);
-}
-
-.card-img-top {
-  width: 100%;
-  border-top-left-radius: calc(0.25rem - 1px);
-  border-top-right-radius: calc(0.25rem - 1px);
-}
-
-.card-img-bottom {
-  width: 100%;
-  border-bottom-right-radius: calc(0.25rem - 1px);
-  border-bottom-left-radius: calc(0.25rem - 1px);
-} */
-
-/* .card-columns .card {
-  margin-bottom: 0.75rem;
-}
-
-@media (min-width: 576px) {
-  .card-columns {
-    column-count: 3;
-    column-gap: 1.25rem;
-    orphans: 1;
-    widows: 1;
-  }
-  .card-columns .card {
-    display: inline-block;
-    width: 100%;
-  }
-} */
-
 a.close.disabled {
   pointer-events: none;
-} 
+}  */
 
 .carousel {
   position: relative;
