--- a/css/default.css
+++ b/css/default.css
@@ -160,7 +160,7 @@ h4, .h4 {
   border-radius: 0.25rem;
 }
 
-/* .card > .list-group:first-child .list-group-item:first-child {
+ .card > .list-group:first-child .list-group-item:first-child {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
@@ -168,7 +168,7 @@ h4, .h4 {
 .card > .list-group:last-child .list-group-item:last-child {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
-} */
+} 
 
 .card-title {
   margin-bottom: 0;
