--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
     line-height: 1
 }
-/* 
+
 ol, ul {
     list-style: none
 } 
-
+/* 
 blockquote, q {
     quotes: none
 } 
@@ -356,7 +356,7 @@ footer {
 html {
     height: 100%;
 }
-/* .page {
+.page {
     height: 100%;
     font: 14px Arial, sans-serif;
     color: #333;
@@ -364,7 +364,7 @@ html {
     margin: 0 auto;
     padding: 0;
     width: 1366px;
-} */
+}
 
 .card-heading {
     display: flex;
