--- a/css/default.css
+++ b/css/default.css
@@ -76,10 +76,7 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-button,
-select,
-optgroup,
-textarea {
+button{
   margin: 0;
   font-family: inherit;
   font-size: inherit;
@@ -91,12 +88,11 @@ input {
   overflow: visible;
 }
 
-button,
-select {
+button{
   text-transform: none;
 }
 
-button,
+/* button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
@@ -116,16 +112,12 @@ button::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   padding: 0;
   border-style: none;
-}
+} */
 
 ::-webkit-file-upload-button {
   font: inherit;
   -webkit-appearance: button;
 }
-/* 
-[hidden] {
-  display: none !important;
-} */
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
