--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,7 @@ footer {
 }
 
 .card {
-    background: url("../img/cbg.jpg");
+    background: url("../img/cbg-min.jpg");
     color: #333;
     border-radius: 20px;
     box-sizing: border-box;
@@ -406,7 +406,7 @@ html {
 }
 
 .description_critical {
-    background: url('../img/cbg.jpg');
+    background: url('../img/cbg-min.jpg');
     color: #000;
     border-radius: 20px;
     margin-top: -20px;
