--- a/css/main.css
+++ b/css/main.css
@@ -433,7 +433,7 @@ html {
     width: 100%;
     margin-top: 40px;
     display: block;
-    background: url(../img/cam2.jpg);
+    background: url(../img/cam2-min.jpg);
     border-radius: 20px;
     background-size: cover;
     background-position: 0 0;
