--- a/css/main.css
+++ b/css/main.css
@@ -311,26 +311,11 @@ footer {
 .menu {
     margin-left: 52px;
 }
-/* 
-.modal {
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background: rgba(51, 51, 51, 0.5);
-} */
 
 html {
     height: 100%;
 }
-.page {
+/* .page {
     height: 100%;
     font: 14px Arial, sans-serif;
     color: #333;
@@ -338,7 +323,7 @@ html {
     margin: 0 auto;
     padding: 0;
     width: 1366px;
-}
+} */
 
 .card-heading {
     display: flex;
