--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-a, body, div, em, footer, h2, h3, h4, html, i, img, li, menu, ol, p, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+a, body, div, em, footer, h2, h3, h4, html, i, img, li, menu, ol, p, time, tt, u, ul, var, video {
     margin: 0;
     padding: 0;
     border: 0;
