--- a/css/main.css
+++ b/css/main.css
@@ -298,7 +298,7 @@ footer {
 .card {
     background: url("../img/cbg-min.jpg");
     color: #333;
-    /* border-radius: 20px; */
+    border-radius: 20px;
     box-sizing: border-box;
     padding: 0 20px 20px 20px
 }
