--- a/css/main.css
+++ b/css/main.css
@@ -697,10 +697,10 @@ html {
         padding-right: 0;
         float: right
     }
-/* 
+ 
     .critical {
         padding: 0
-    } */
+    } 
 
     .heading-critical {
         padding: 0 17px;
